fix update card rote fix patch card rote